@@ -51,7 +51,7 @@ ASSEMBLIES =  \
 	$(GNOME_SHARP_20_LIBS) \
 	$(GTK_DOTNET_20_LIBS) \
 	$(NOTIFY_SHARP_LIBS) \
-	$(AVAHI_SHARP_LIBS) 
+	$(MONO_ZEROCONF_LIBS)
 
 $(TARGET): $(CSFILES) Defines.cs
 	$(CSC) -unsafe -out:$@ $(CSFLAGS) $^ $(ASSEMBLIES) $(RESOURCES)
